--- a/css/responsive-desktop.css
+++ b/css/responsive-desktop.css
@@ -168,7 +168,8 @@
     }
 
     .summary-main {
-        padding-left: 120px;
+        padding-left: 260px;
+        padding-right: 32px;
     }
 
     .contacts-main {
