--- a/css/responsive-tablet.css
+++ b/css/responsive-tablet.css
@@ -106,6 +106,7 @@
     .legal-main {
         min-height: calc(100vh - 80px);
         padding-left: 0;
+        padding-right: 0;
         padding-bottom: 96px;
         box-sizing: border-box;
     }
